--- a/ResumeAI_Integrated_App/requirements.txt
+++ b/ResumeAI_Integrated_App/requirements.txt
@@ -8,3 +8,10 @@ transformers==4.30.2
 notion-client==2.0.0
 requests==2.31.0
 Werkzeug==2.3.7
+sounddevice==0.4.6
+scipy==1.11.1
+openai-whisper==20231117
+language-tool-python==2.7.1
+google-generativeai==0.3.2
+bert_score>=0.3.13
+transformers>=4.25.0
